# asgi-routing

./: .gitignore  .pre-commit-config.yaml  README.md  bench.ipynb  pyproject.toml
asgi_routing/: __init__.py  _lifespan_dispatcher.py  _router.py  _routes.py  _routing.py  _types.py
tests/: test_lifespans.py  test_router.py
